--- a/styles/global.css
+++ b/styles/global.css
@@ -22,7 +22,7 @@
 	content: '';
 	width: 100%;
 	height: 100%;
-	filter: blur(150px) saturate(250%);
+	filter: blur(150px) saturate(150%);
 	top: 80px;
 	opacity: 0.15;
 }
@@ -37,9 +37,9 @@ main {
 }
 
 .app {
-	@apply max-w-7xl w-full flex justify-center mx-auto px-6 sm:px-16 flex-col;
+	@apply max-w-7xl w-full flex justify-center mx-auto px-6 sm:px-16 flex-col mt-2 sm:mt-5 pt-5 sm:pt-5;
 }
 
 .nav {
-	@apply flex justify-between mt-2 sm:mt-5 pt-5 sm:pt-5;
+	@apply flex justify-between;
 }
